--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "@ant-design/plots": "1.2.5",
     "@azure/storage-blob": "12.14.0",
+    "@types/qrcode-terminal": "0.12.0",
     "@types/uuid": "9.0.1",
     "antd": "5.5.0",
     "axios": "1.3.4",
@@ -31,6 +32,7 @@
     "moment-timezone": "0.5.43",
     "next": "13.4.5",
     "pnpm": "7.29.1",
+    "qrcode-terminal": "0.12.0",
     "rc-picker": "3.7.4",
     "react": "18.2.0",
     "react-chartjs-2": "5.2.0",
@@ -40,6 +42,7 @@
     "react18-input-otp": "1.1.3",
     "react18-otp-input": "1.0.3",
     "uuid": "9.0.0",
+    "whatsapp-web.js": "1.21.0",
     "xlsx": "0.18.5",
     "yup": "1.0.2"
   },
