--- a/package.json
+++ b/package.json
@@ -19,18 +19,30 @@
   },
   "dependencies": {
     "@ant-design/plots": "1.2.5",
+    "@azure/msal-browser": "2.38.0",
     "@azure/storage-blob": "12.14.0",
+    "@microsoft/microsoft-graph-client": "3.0.5",
+    "@reduxjs/toolkit": "2.0.1",
+    "@types/next-redux-wrapper": "3.0.0",
+    "@types/nodemailer": "6.4.8",
     "@types/qrcode-terminal": "0.12.0",
+    "@types/redux-persist": "4.3.1",
     "@types/uuid": "9.0.1",
     "antd": "5.5.0",
     "axios": "1.3.4",
     "chart.js": "4.3.0",
+    "dotenv": "16.3.1",
+    "express": "4.18.2",
     "faker": "6.6.6",
     "formik": "2.2.9",
+    "googleapis": "121.0.0",
     "json-2-csv": "4.0.0",
     "jspdf": "2.5.0",
     "moment-timezone": "0.5.43",
+    "msal": "1.4.18",
     "next": "13.4.5",
+    "next-redux-wrapper": "8.1.0",
+    "nodemailer": "6.9.3",
     "pnpm": "7.29.1",
     "qrcode-terminal": "0.12.0",
     "rc-picker": "3.7.4",
@@ -39,8 +51,10 @@
     "react-countdown-circle-timer": "3.2.1",
     "react-dom": "18.2.0",
     "react-icons": "4.9.0",
+    "react-redux": "9.1.0",
     "react18-input-otp": "1.1.3",
     "react18-otp-input": "1.0.3",
+    "redux-thunk": "3.1.0",
     "uuid": "9.0.0",
     "whatsapp-web.js": "1.21.0",
     "xlsx": "0.18.5",
