--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "antd": "5.5.0",
     "axios": "1.3.4",
     "chart.js": "4.3.0",
+    "dayjs": "1.11.10",
     "dotenv": "16.3.1",
     "express": "4.18.2",
     "faker": "6.6.6",
